chore: add php composer in docker compose

--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "packageManager": "pnpm@10.1.0",
     "scripts": {
         "setup": "./scripts/initial-setup.sh",
-        "prebuild": "composer install --no-dev",
+        "composer": "docker compose --profile tools run --rm composer",
+        "prebuild": "pnpm composer:install-prod",
         "build": "tsc && vite build",
-        "postbuild": "composer install",
-        "dev": "composer install && tsc && vite build --watch",
+        "postbuild": "pnpm composer:install",
+        "dev": "pnpm composer:install && tsc && vite build --watch",
         "lint": "concurrently \"pnpm lint:core\" \"pnpm lint:ui\"",
         "lint:core": "./vendor/bin/phpcs",
         "lint:fix:core": "./vendor/bin/phpcbf",
         "lint:ui": "eslint --ext .ts,.tsx,.js,.jsx src/ vite.config.ts plugins",
-        "boot": "docker compose up",
-        "boot:arm64v8": "docker compose -f docker-compose.arm64v8.yml up",
         "test": "./vendor/bin/phpunit",
         "todos": "leasot 'src/**/*.{php,ts,js}'",
         "prepare": "husky install",
         "make:pot": "./scripts/make-pot.sh",
-        "generate-md": "wp-readme-to-md --screenshot-url=https://raw.githubusercontent.com/pagseguro/pagbank-for-woocommerce/main/wordpress_org_assets/{screenshot}.png"
+        "generate-md": "wp-readme-to-md --screenshot-url=https://raw.githubusercontent.com/pagseguro/pagbank-for-woocommerce/main/wordpress_org_assets/{screenshot}.png",
+        "composer:install": "pnpm composer install",
+        "composer:install-prod": "pnpm composer install --no-dev",
+        "composer:update": "pnpm composer update",
+        "composer:require": "pnpm composer require",
+        "composer:require-dev": "pnpm composer require --dev"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.5.0",
