--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,16 @@ services:
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
 
+  composer:
+    image: composer:latest
+    volumes:
+      - ./composer.json:/app/composer.json
+      - ./composer.lock:/app/composer.lock
+      - ./vendor:/app/vendor
+    working_dir: /app
+    profiles:
+      - tools
+
   wordpress-cli:
     image: wordpress:cli
     depends_on:
@@ -34,7 +44,7 @@ services:
       - ./wp:/var/www/html
       - ./:/var/www/html/wp-content/plugins/pagbank-for-woocommerce
     profiles:
-      - donotstart
+      - tools
 
   phpmyadmin:
     image: phpmyadmin
